# SDL3Template

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/Engine/Rendering/: Rendering.cpp  Rendering.h
